--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,8 @@
 }
 
 body{
-    font-family: sans-serif;    
+    font-family: sans-serif;  
+    background: #F5F5F5; 
 }
 
 .header{
@@ -114,4 +115,154 @@ body{
     height: 16px;
     background: #003A8C;
     margin-right: 12px;
+}
+
+.container{
+    display: flex;
+    max-width: 1200px;
+    margin: auto;
+}
+
+.menu-sidebar{
+    max-width: 192px;
+    margin-top: 18px;
+    margin-right: 12px;
+}
+
+.menu-sidebar .user{
+    padding-left: 10px;
+}
+
+.menu-sidebar .user-avatar{
+    width: 24px;
+    height: 24px;
+}
+
+.menu-sidebar .user-name{
+    font-weight: normal;
+    color: #262626;
+    font-size: 14px;
+    line-height: 22px;
+}
+
+.nav-group{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin-top: 12px;
+    margin-bottom: 24px;
+}
+
+.nav-link {
+    padding: 4px 8px;
+    display: flex;
+    align-items: center;
+    border-radius: 4px;
+    text-decoration: none;
+    color: #595959;
+    line-height: 22px;
+    font-size: 14px;
+    font-weight: normal;
+}
+
+.nav-link.active{
+    background: #FFFFFF;
+    font-weight: bold;
+    color: #262626;
+}
+
+.blue-nav-link{
+    padding-top: 12px;
+    margin-left: 2px;
+}
+
+.nav-text {
+    margin-left: 8px;
+}
+
+.nav-title{
+    padding-left: 10px;
+    color: #262626;
+    font-weight: 600;
+    font-size: 14px;
+    line-height: 20px;
+    margin-bottom: 4px;
+    margin-top: 0;
+}
+
+.blue-nav-text{
+    color: #1890FF;
+    padding-left: 12px;
+}
+
+.main-feed{
+    margin-top: 18px;
+    max-width: 588px;
+    flex-grow: 1;
+}
+
+.create-post{
+    background: #FFFFFF;
+    box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.15);
+    border-radius: 4px;
+    overflow: hidden;
+    width: 100%;
+}
+
+.create-post-header{
+    padding: 9px 16px;
+    background: #F5F5F5;
+}
+
+.create-post-title{
+    margin: 0;
+    font-weight: 600;
+    color: #595959;
+    font-size: 14px;
+    line-height: 22px;
+}
+
+.create-post-body{
+    padding-top: 16px;
+    padding-bottom: 24px;
+    padding-left: 16px;
+    padding-right: 16px;
+    display: flex;
+    align-items: flex-start;
+}
+
+.create-post-footer{
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    padding: 0 16px 16px 16px;
+}
+
+.create-post-footer::before{
+    content: '';
+    width: 100%;
+    height: 1px;
+    background-color: #E8E8E8;
+    margin-bottom: 16px;
+}
+
+.create-post-input{
+    width: 100%;
+    padding-top: 8px;
+    color: #8C8C8C;
+}
+
+.tag{
+    color: #595959;
+    background: #F5F5F5;
+    border-radius: 48px;
+    border: none;
+    padding: 9px 12px;
+    display: flex;
+    align-items: center;
+    margin-right: 8px;
+}
+
+.tag-icon{
+    margin-right: 8px;
 }
