--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@
 
 body{
     font-family: sans-serif;  
-    background: #F5F5F5; 
+    background: #F5F5F5;
 }
 
 .header{
@@ -167,7 +167,8 @@ body{
 
 .nav-link.active{
     background: #FFFFFF;
-    font-weight: bold;
+    /* font-weight: bold; */
+    font-size: .9em;
     color: #262626;
 }
 
@@ -177,6 +178,7 @@ body{
 }
 
 .nav-text {
+    margin: 0;
     margin-left: 8px;
 }
 
@@ -261,8 +263,139 @@ body{
     display: flex;
     align-items: center;
     margin-right: 8px;
+    outline: none;
 }
 
 .tag-icon{
     margin-right: 8px;
+}
+
+.tag:active{
+    background: #dfdada;
+}
+
+.post{
+    background: #FFFFFF;
+    box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.15);
+    border-radius: 4px;
+    margin: 16px 0;
+    padding: 16px;
+}
+
+.post-header{
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 16px;
+}
+
+.post-header-button{
+    background-color: #fff;
+    border: none;
+}
+
+.post-header .user-avatar{
+    width: 48px;
+    height: 48px;
+    margin-right: 12px;
+}
+
+.post-info{
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.post-author{
+    font-weight: 600;
+    width: 100%;
+    font-size: 14px;
+    line-height: 22px;
+    color: #0050B3;
+    text-decoration: none;
+}
+
+.post-time{
+    color: #8C8C8C;
+    font-size: 14px;
+    line-height: 22px;
+    font-weight: normal;
+}
+
+.post-time::after{
+    display: inline-block;
+    content: '';
+    height: 4px;
+    width: 4px;
+    background-color: #BFBFBF;
+    border-radius: 50%;
+    margin-right: 6px;
+    margin-left: 6px;
+    vertical-align: middle;
+}
+
+.post-info-time{
+    display: flex;
+    align-items: center;
+}
+
+.post-text{
+    font-size: 14px;
+    font-weight: normal;
+    line-height: 22px;
+    color: #595959;
+    margin-bottom: 16px;
+}
+
+.post-text a {
+    color: #096DD9;
+    text-decoration: none;
+}
+
+.post-image{
+    border: 1px solid #BFBFBF;
+    border-radius: 4px;
+    width: 100%;
+}
+
+.likes{
+    margin-top: 9px;
+    margin-bottom: 9px;
+    display: flex;
+    align-items: center;
+}
+
+.likes-counter{
+    color: #595959;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 22px;
+    margin-left: 4px;
+}
+
+.post-footer{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
+
+.post-button{
+    background-color: #fff;
+    border: none;
+    display: flex;
+    align-items: center;
+}
+
+.post-button-text{
+    color: #595959; 
+    font-size: 14px;
+    line-height: 22px;
+    font-weight: 600;
+    margin-left: 8px;
+}
+
+.post-footer::before{
+    content: '';
+    width: 100%;
+    height: 1px;
+    background-color: #E8E8E8;
+    margin-bottom: 16px;
 }
